# SampleGithubCI

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml
ci/: build-linux.sh  clean.sh
cmake/modules/: FindTestLib.cmake
src/: CMakeLists.txt  main.cpp
