CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(tester)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)

IF (NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -pedantic -Wall -g ")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -pedantic -O3 ")

FIND_PACKAGE(TestLib REQUIRED)
INCLUDE_DIRECTORIES(${TESTLIB_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(test ${TEST_SOURCES})
